UI Incorporation - Import SB's svg and fix the login page alignment issue

--- a/src/sass/_icons.scss
+++ b/src/sass/_icons.scss
@@ -16,7 +16,7 @@
   display: inline-block;
   width: 129px;
   height: 15.4px;
-  background: url('assets/icons/vuestic.svg') no-repeat center center;
+  background: url('assets/icons/SB.svg') no-repeat center center;
 }
 
 .i-menu-expanded {
